--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,5 @@
-<h1>Hello, world!</h1>
+<% var stylesheets = [''] %>
+<% include partials/header %>
+
+<% var scripts=[''] %>
+<% include partials/footer %>
