--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <% var stylesheets = [''] %>
 <% include partials/header %>
 
+<h1>Hello, world!</h1>
+
 <% var scripts=[''] %>
 <% include partials/footer %>
