finally add react

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <% var stylesheets = [''] %>
 <% include partials/header %>
 
-<h1>Hello, world!</h1>
+<div id="app">
+	<p>Something is terribly wrong, or you have javascript disabled</p>
+</div>
 
 <% var scripts=[''] %>
 <% include partials/footer %>
